# LIRA

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MCP.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_agent.py
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2f98b9a16ade_make_transaction_fields_mandatory.py  53c55136f49e_add_secondary_category_id_to_.py  a1b2c3d4e5f6_add_investments_table.py  b2c3d4e5f6a7_add_asset_prices_table.py  d152c555484c_initial_schema_with_settings_payment_.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md
finetune/: README.md  examples.yaml  ollama_augment.py  requirements.txt  run.py
src/lira/: __init__.py  version.py
src/lira/api/: __init__.py  main.py  ws.py
src/lira/api/routes/: __init__.py  accounts.py  dashboard.py  plots.py  portfolio.py  transactions.py
src/lira/cli/: __init__.py  console.py
src/lira/core/: __init__.py  agent.py  config.py  exceptions.py  fg_agent.py  init.py  llm.py  mcp_registry.py  tools.py
src/lira/db/: __init__.py  models.py  repositories.py  session.py  versioning.py
src/lira/mcp/: __init__.py  prompts.py  server.py  tools.py
src/lira/mcp/tools/: __init__.py
src/lira/services/: __init__.py  analytics.py  portfolio.py
src/lira/web/: __init__.py
src/lira/web/templates/: dashboard.html
tests/: conftest.py
tests/integration/: __init__.py  test_llm_to_db_flow.py
tests/unit/: __init__.py  test_account.py  test_agent.py  test_agent_streaming.py  test_agent_tools.py  test_api.py  test_llm_provider.py  test_portfolio_service.py  test_tools.py  test_transaction.py
