[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lira"
version = "0.1.0"
description = "L.I.R.A. - AI-native personal finance and investment tracker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Davide", email = "davide@example.com" }
]
keywords = ["finance", "ai", "agent", "investment", "accounting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "yfinance>=0.2.35",
    "fastmcp>=3.2.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.90.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-pretty>=1.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.6",
    "safety>=3.0.0",
    "pytest-httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "pytest-factoryboy>=2.6.0",
    "hypothesis>=6.97.0",
]
web = [
    "jinja2>=3.1.3",
    "aiosqlite>=0.19.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
lira = "lira.cli.console:app"
lira-api = "lira.api.main:main"
lira-mcp = "lira.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lira"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PLC",    # Pylint convention
    "PLE",    # Pylint errors
    "PLR",    # Pylint refactor
    "NPY",    # NumPy
    "A",      # flake8-builtins
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # implicit string concatenation
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",       # line too long (handled by formatter)
    "B008",       # do not perform function calls in argument defaults
    "PLR0913",    # too many arguments
    "PLR2004",    # magic value comparison
    "PLR0912",    # too many branches
    "PLR6301",    # method could be function
    "C901",       # too complex
    "PT004",      # pytest missing fixture underscores
    "PT006",      # pytest parametrize names wrong
    "PT012",      # pytest raise in fixture
    "PT015",      # pytest fixture auto use
    "PLC0415",    # import should be at top-level (lazy imports for CLI)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001", "E402"]
"tests/**/*.py" = ["S101", "B011", "PLR2004"]
"docs/**/*.py" = ["F401", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
no_color_output = false

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "sqlalchemy.*",
    "rich.*",
    "typer.*",
    "yfinance.*",
    "tests.*",
    "docs.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=lira",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
    "db: marks tests that require database",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["lira"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "ignore:.*",
    "type: ignore",
]
show_missing = true
skip_covered = false
fail_under = 0

[tool.bandit]
targets = ["src"]
exclude = ["tests", "docs"]
skips = ["B101", "B413"]  # skip assert and blacklist crypto checks

[tool.pylint]
max-line-length = 100
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "cyclic-import",
]

[tool.pylint.master]
ignore = "tests,docs"

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-docstring",
    "consider-using-f-string",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
